--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nextcloud/initial-state": "^2.1.0",
     "@nextcloud/router": "^2.1.2",
     "@nextcloud/vue": "^5.4.0",
+    "jwt-decode": "^3.1.2",
     "vue": "^2.7.0"
   },
   "browserslist": [
